[package]
name = "demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rq-tower = { path = "../.." }
#rq-tower = { git = "ssh://git@github.com/lz1998/rq-tower.git", branch = "main" }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
bytes = "1.1.0"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "fmt",
    "env-filter",
    "local-time",
] }

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
incremental = false
codegen-units = 1
rpath = false
