[package]
name = "demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rq-tower = { path = "../.." }
#rq-tower = { git = "https://github.com/lz1998/rq-tower.git", branch = "main" }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
async-trait = "0.1"
bytes = "1.1.0"
serde_json = "1.0"
#fast-socks5 = "0.5.0"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }

[profile.release]
opt-level = 'z'
debug = false
debug-assertions = false
overflow-checks = false
lto = true
incremental = false
codegen-units = 1
rpath = false
strip = true
#panic = "abort" # 交叉编译可能需要
